syntax = "proto3";

package go.micro.service.rulesrv;

service RuleSrv {
	rpc Event(EventRequest) returns (EventResponse) {}
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message EventRequest{
	string userId = 1;
	int32 event = 2;
	string refId = 3;
}

message EventResponse{
	int32 status = 1;
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
